@@ -1,3 +1,7 @@
+2007-10-23  Robert Ancell  <robert.ancell@gmail.com>
+
+	* gnome-sudoku.in: Display error dialog and quit if unable to import gnome-sudoku.gnome-sudoku (Bug #418427)
+
 2007-08-30  Thomas H.P. Andersen  <phomes@gmail.com>
 
 	* /glade/puzzle_generator.glade: Don't allow to generate 0 puzzles (bug #464585)
